# Transcription-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start_server.bat  start_server.sh  stop_server.bat
.claude/: settings.local.json
.github/workflows/: test.yml
config/: .env.example
data/audio/uploads/: ejemplo1.m4a
data/transcriptions/output/: history.csv
docs/: Architecture.excalidraw  architecture.md
src/: __init__.py  __main__.py  agent.py  api_server.py
src/prompts/: agent_prompt.md  query_history_description.md  save_transcription_description.md  tools_overview.md  transcribe_audio_description.md
src/tools/: __init__.py  history.py  transcriber.py
tests/: __init__.py  test_tools.py
